--- a/index.html
+++ b/index.html
@@ -3,29 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Document</title>
   </head>
   <body>
-    <nav>
-      <a href="#">Home</a>
-      <a href="">Experience</a>
-      <a href="">Projects</a>
-    </nav>
+    <div>
+      <nav>
+        <a href="#">Home</a>
+        <a href="">Experience</a>
+        <a href="">Projects</a>
+      </nav>
+    </div>
+
     <header>
       <h1>Turning Ideas into Code, One Line at a Time!</h1>
     </header>
-    <section>
-      <h3>About Me</h3>
-      <p>
-        I'm a software developer passionate about crafting solutions through
-        scalable efficient web and mobile applications. A computer science
-        graduate from Notre Dame University and a life-long learner and explorer
-        in the tech field.
-      </p>
+    <section class="about">
+      <div class="left">
+        <h3>About Me</h3>
+        <p>
+          I'm a software developer passionate about crafting solutions through
+          scalable efficient web and mobile applications. A computer science
+          graduate from Notre Dame University and a life-long learner and
+          explorer in the tech field.
+        </p>
+      </div>
+
+      <div class="right">
+        <img src="./images.jpg" alt="coding_pic" />
+      </div>
     </section>
-    <aside>
-      <img src="./images.jpg" alt="coding_pic" />
-    </aside>
+    <section>
+      <h2>My Skills</h2>
+    </section>
     <footer></footer>
   </body>
 </html>
