Added skills images and style

--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Document</title>
+
+    <title>My Portfolio</title>
   </head>
   <body>
-    <div>
-      <nav>
-        <a href="#">Home</a>
-        <a href="">Experience</a>
-        <a href="">Projects</a>
-      </nav>
-    </div>
-
+    <nav>
+      <a href="#">Home</a>
+      <a href="">Experience</a>
+      <a href="">Projects</a>
+    </nav>
     <header>
-      <h1>Turning Ideas into Code, One Line at a Time!</h1>
+      <h2>
+        Hello, I'm Sana Kassamani <br />
+        Turning Ideas into Code, One Line at a Time!
+      </h2>
     </header>
     <section class="about">
       <div class="left">
-        <h3>About Me</h3>
+        <h2>About Me</h2>
         <p>
           I'm a software developer passionate about crafting solutions through
           scalable efficient web and mobile applications. A computer science
@@ -30,11 +31,17 @@
       </div>
 
       <div class="right">
-        <img src="./images.jpg" alt="coding_pic" />
+        <img src="./images/images.jpg" alt="coding_pic" />
       </div>
     </section>
-    <section>
+    <section class="skills">
       <h2>My Skills</h2>
+      <img class="icon" src="./images/c-.png" alt="c++ icon" />
+      <img class="icon" src="./images/c-sharp.png" alt="c# icon" />
+      <img class="icon" src="./images/python.png" alt="python icon" />
+      <img class="icon" src="./images/html.png" alt="html icon" />
+      <img class="icon" src="./images/css.png" alt="css icon" />
+      <img class="icon" src="./images/sql-server.png" alt="sql icon" />
     </section>
     <footer></footer>
   </body>
