Added and styled projects page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>My Portfolio</title>
   </head>
   <body>
     <nav>
       <a href="#">Home</a>
-      <a href="">Experience</a>
-      <a href="">Projects</a>
+      <a href="./projects.html">Projects</a>
     </nav>
     <header>
       <h2>
@@ -43,6 +45,18 @@
       <img class="icon" src="./images/css.png" alt="css icon" />
       <img class="icon" src="./images/sql-server.png" alt="sql icon" />
     </section>
-    <footer></footer>
+    <footer>
+      <p>
+        Let's connect via:
+        <a
+          href="https://www.linkedin.com/in/sana-kassamani-403357257?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BSBCtApOjSu6Iw%2BceWolmRg%3D%3D"
+        >
+          <i class="fa fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/Sana-Kassamani">
+          <i class="fa fa-github"></i>
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
