Renamed files for clarification

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       </div>
 
       <div class="right">
-        <img src="./images/images.jpg" alt="coding_pic" />
+        <img src="./images/coding.jpg" alt="coding_pic" />
       </div>
     </section>
     <section class="skills">
       <h2>My Skills</h2>
-      <img class="icon" src="./images/c-.png" alt="c++ icon" />
+      <img class="icon" src="./images/c++.png" alt="c++ icon" />
       <img class="icon" src="./images/c-sharp.png" alt="c# icon" />
       <img class="icon" src="./images/python.png" alt="python icon" />
       <img class="icon" src="./images/html.png" alt="html icon" />
