Modified posiion of divs

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <h2>About Me</h2>
         <p>
           I'm a software developer passionate about crafting solutions through
-          scalable efficient web and mobile applications. A computer science
-          graduate from Notre Dame University and a life-long learner and
-          explorer in the tech field.
+          efficient web and mobile applications. A computer science graduate
+          from Notre Dame University and a life-long learner and explorer in the
+          tech field.
         </p>
       </div>
 
